--- a/CryptoDemo.vcxproj
+++ b/CryptoDemo.vcxproj
@@ -39,7 +39,7 @@
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
     <ProjectGuid>{7a0ab1be-9e49-4605-8fc5-9a5ecc4b0f18}</ProjectGuid>
-    <RootNamespace>RSA2048</RootNamespace>
+    <RootNamespace>CryptoDemo</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
